...
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/import_review_image" />

    <Button
        android:id="@+id/import_review_select_all"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_all"
        app:layout_constraintStart_toStartOf="parent"
...
